Changelog

Version 1.5
-----------
- core execution is now a pause-resume
- Uses JTextPane for the lower window (new Swing screen model)
- All tests are JUnit 4 tests
- Using JMock 2.5
- Memory, stack and variables are now all unsigned 16 or 8 bit values
- better NetBeans integration
- replaced ZsciiString and ZsciiStringBuilder with the J2SE versions

Version 1.01
------------
- French translation of UI (by Eric Forgeot)
- application version can read from URL as well
- DEBUG flag can now only be used in application version

Version 1.0
-----------

- revamped object system
- revamped dictionary and encoding
- fixed unicode representation
- updated to GPL V3
- internationalized user interface for English and German
- improved Mac OS X integration
- debug option

Version 0.92_02
---------------
- fixed a display issue that arises when input is expected, but no prompt
  string is printed by the game
- small refactorings in the screen model
- renewed the certificate which was expired

Version 0.92
------------
- picture scaling added
- V6 cursor handling fixed (was character based, changed to pixel based)
- fixed get_wind_prop 11 (returned wrong color values)
- fixed @set_window in V6
- fixed retrieval of cursor coordinates
- optimization: cpu stack is now an array of primitives
- can run Journey for some time
- placeholder picture support added (needed for Shogun)
- @picture_table, @erase_picture, @pull (V6), @pop_stack, @push_stack,
  @scroll_window, @read_mouse
- swing antialiasing enabled, text antialias as an option
- user stacks added
- small fix: now displays the time status correctly
- "color under cursor" implemented
- fine-grained control over flushing, prevents lost characters on 
  multiprocessor machines when typing fast
- newline interrupts
- stream buffering moved into sub window classes
- outputstream 3 reports text width in V6

Version 0.90
------------
- customizable fonts sizes/default colors
- preferences dialog added